[gd_scene load_steps=3 format=3 uid="uid://xeay1sdxda7m"]

[ext_resource type="Script" path="res://scripts/ui/levels.gd" id="1_7kamk"]

[sub_resource type="Theme" id="Theme_r80vn"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kamk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -33.0
offset_right = 31.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Level1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 2
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 45.0
grow_vertical = 0
scale = Vector2(2, 2)
pivot_offset = Vector2(0.5, 29)
theme = SubResource("Theme_r80vn")

[node name="BackButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Back
"

[connection signal="pressed" from="VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
